--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: black;
     opacity: 0;
     transition: opacity 1s;
     z-index: 1;
