--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,31 @@
-/* styles.css */
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black; /* Set the background color to black */
+}
+
+#clickableImage {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    cursor: pointer;
+}
+
 .overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: white;
     opacity: 0;
     transition: opacity 1s;
     z-index: 1;
+}
+
+/* Center the clickable image */
+#clickableImage {
+    display: block;
+    margin: 0 auto;
 }
