--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 }
 
 #clickableImage {
-    width: 100%;
-    height: 100vh;
+    width: 400;
+    height: 400;
     object-fit: cover;
     cursor: pointer;
 }
