fixed fade issue

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: transparent; /* Set the background to transparent */
+    background-color: white; /* Set the background to transparent */
     opacity: 0;
     transition: opacity 1s;
     z-index: 1;
