--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: retro;
+    src: url(/assets/8bitOperatorPlus-Bold.woff);
+  }
+
 body {
     margin: 0;
     padding: 0;
@@ -29,4 +34,9 @@ body {
 #clickableImage {
     display: block;
     margin: 0 auto;
+}
+
+h1 {
+    font-family: retro;
+    text-align: center;
 }
