--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: retro;
-    src: url(/assets/8bitOperatorPlus-Bold.woff);
+    src: url(assets/8bitOperatorPlus-Bold.woff);
   }
 
 body {
@@ -39,4 +39,5 @@ body {
 h1 {
     font-family: retro;
     text-align: center;
+    color: white;
 }
